<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exhibits"
            android:icon="@drawable/ic_exhibit_black_24dp"
            android:title="@string/menu_exhibits" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_videos" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_history" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_schedule_a_visit"
                android:icon="@drawable/ic_schedule_black_24dp"
                android:title="@string/menu_schedule_a_visit" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_contact_phone_black_24dp"
                android:title="@string/menu_contact_us" />
        </menu>
    </item>

</menu>
